# zen-rust

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20231118152013_init.up.sql
src/: db.rs  main.rs
src/models/: auth.rs  common.rs
src/routes/: auth.rs
