[package]
name = "zen-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15.0"
argon2 = "0.5.2"
serde_json = "1.0.108"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.5.0", features = ["v4"] }
tokio = { version = "1.34.0", features = ["full"] }
